force-app/main/default/objects/vlocity_ins__VlocityDataPack__c/fields/vlocity_ins__IsLastProcessed__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsLastProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Last Processed</label>
    <type>Checkbox</type>
</CustomField>