force-app/main/default/objects/vlocity_ins__VlocityDataPack__c/fields/vlocity_ins__LastProcessedBy__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LastProcessedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LastProcessedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vlocity_Data_Packs</relationshipName>
    <type>Lookup</type>
</CustomField>